# codexSync

./: .gitattributes  .gitignore  AGENTS.MD  AGENTS.md  AI_CONTEXT.MD  AI_RULES.MD  CHANGELOG.MD  CLA.MD  COMMERCIAL_LICENSE.MD  CONTRIBUTING.MD  CONTRIBUTING.md  MANIFEST.in  README.MD  README.RU.MD  README.md  ai_context.md  ai_rules.md  codexsync.spec  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  release-exe.yml
codexsync/: __init__.py
docs/: DECISIONS.MD  DECISIONS.md  PROJECT_CONTEXT.MD  PROJECT_CONTEXT.md  PUBLISHING.MD  PUBLISHING.md
scripts/: pyinstaller_entrypoint.py
scripts/scheduler/macos/: README.MD  install-launchd.sh  launchd.config.sh  run-codexsync.sh  uninstall-launchd.sh
scripts/scheduler/windows/: README.MD  install-task.ps1  remove-task.ps1  run-codexsync.ps1  task.config.ps1
src/codexsync/: __init__.py  app.py  backup.py  cli.py  config.py  exceptions.py  exit_codes.py  filters.py  gui_prompt.py  logging_setup.py  manifest.py  models.py  planner.py  process_detector.py  scanner.py  state_locator.py  sync_engine.py
tests/: test_bootstrap.py  test_cli_init_config.py  test_cli_manual_confirmation.py  test_cli_preflight.py  test_config.py  test_integration_sync_flow.py  test_logging_setup.py  test_manifest.py  test_planner.py  test_preflight.py  test_process_detector.py  test_process_snapshot.py  test_restore.py  test_safety_policy.py  test_session_mode.py  test_sync_engine.py
