[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexsync"
version = "0.1.0"
description = "Local-first Codex state sync utility"
readme = "README.MD"
requires-python = ">=3.11"
authors = [{ name = "codexSync contributors" }]
dependencies = []

[project.scripts]
codexsync = "codexsync.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
