[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexsync"
version = "0.1.2"
description = "Local-first Codex state sync utility"
readme = "README.MD"
requires-python = ">=3.11"
authors = [{ name = "codexSync contributors" }]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["codex", "sync", "backup", "cli", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kroxiksut/codexSync"
Repository = "https://github.com/kroxiksut/codexSync"
Issues = "https://github.com/kroxiksut/codexSync/issues"

[project.scripts]
codexsync = "codexsync.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
codexsync = ["config.example.toml"]

[tool.setuptools.packages.find]
where = ["src"]
